# iz2

./: CMakeLists.txt  README.md  a.out  cppcheck_report.txt  database.txt  do_statistic.c  header.h  in.txt  main.c  run_and_write.c  structs.h
.github/workflows/: cmake.yml
include/: utils.h  with_fork.h  without_fork.h
linters/: run.sh
src/: main.c  multi.c  single.c  utils.c  with_fork.c  without_fork.c
test/: utils.cpp  without_fork.cpp
tests/: stress_test.c  test.cpp
